example/load-balance-external/db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/external-service: '{"external-svc": {"domain": "www.externalsvc.com"}}'
  name: dbs-ingress
spec:
  ingressClassName: cpx-ingress
  rules:
  - host: www.externalsvc.com
    http:
      paths:
      - backend:
          service:
            name: external-svc
            port:
              number: 30036
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: cpx-ingress
spec:
  controller: citrix.com/ingress-controller
---
